--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,5 @@
-<main class="container">
-  <div class="row text-center justify-content-center">
-    <div class="col">
-      <h1 class="display-4">Hello World!</h1>
-    </div>
-  </div>
-</main>
+<% content_for :title, 'Home' %>
+<h1>Sample App</h1>
+<p>
+  This is the home page for the <a href="http://www.railstutorial.org/"> Ruby on Rails Tutorial</a> sample application.
+</p>
