--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,7 @@
-<h1>Sample App</h1>
-<p>
-  This is the home page for the <a href="http://www.railstutorial.org/"> Ruby on Rails Tutorial</a> sample application.
-</p>
+<div class="p-5 mb-4 bg-body-secondary rounded-3">
+  <div class="container-fluid py-5">
+        <h1 class="display-5 fw-bold">Welcome to the Sample App</h1>
+        <p class="col-md-8 fs-4">This is the home page for the <a href="http://www.railstutorial.org/"> Ruby on Rails Tutorial</a> sample application.</p>
+        <%= link_to 'Sign up now!', signup_path, class: "btn btn-primary btn-lg"%>
+  </div>
+</div>
