--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,12 @@
   <body>
       <div class="container">
         <%= render 'layouts/header' %>
+        <%= render 'shared/flashes' %>
         <%= yield %>
         <%= render 'layouts/footer' %>
+        <div class="alert alert-primary" role="alert">
+          <%= debug(params) if Rails.env.development? %>
+        </div>
       </div>
   </body>
 </html>
