--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,26 +1,24 @@
-<div class="row justify-content-center mt-3">
-    <div class="col-md-6">
-        <div class="card w-75 mb-3">
-            <div class="card-body text-center">
-                <h5 class="card-title fs-3">Sign up</h5>
-                <div class="form-floating mb-3">
-                    <input type="text" class="form-control">
-                    <label for="floatingInput">Name</label>
-                </div>
-                <div class="form-floating mb-3">
-                    <input type="email" class="form-control">
-                    <label for="floatingInput">Email</label>
-                </div>
-                <div class="form-floating mb-3">
-                    <input type="password" class="form-control">
-                    <label for="floatingPassword">Password</label>
-                </div>
-                <div class="form-floating mb-3">
-                    <input type="password" class="form-control">
-                    <label for="floatingPassword">Confirmation</label>
-                </div>
-                <a href="#" class="btn btn-primary">Create my account</a>
-            </div>
-        </div>
-    </div>
-</div>       
+<%= form_with model: user do |form| %>
+   <%= render 'shared/error_messages'%>
+  <div class="mb-3">
+    <%= form.label :name, class: "form-label" %>
+    <%= form.text_field :name, type: "text", class: "form-control" %>
+  </div>
+  <div class="mb-3">
+    <%= form.label :email, class: "form-label" %>
+    <%= form.text_field :email, type: "email", class: "form-control" %>
+  </div>
+  <div class="mb-3">
+    <%= form.label :password, class: "form-label" %>
+    <%= form.text_field :password, type: "password", class: "form-control" %>
+  </div>
+  <div class="mb-3">
+    <%= form.label :password_confirmation, class:"form-label"  %>
+    <%= form.text_field :password_confirmation,  type: "password", class: "form-control" %>
+  </div>
+  <%= form.submit %>
+<% end %>
+
+                
+
+
