--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,1 +1,10 @@
-<%= render 'form' %>
+<div class="row justify-content-center mt-3">
+    <div class="col-md-6">
+        <div class="card w-75 mb-3">
+            <div class="card-body">
+                <h5 class="card-title fs-3 text-center">Sign up</h5>
+                <%= render 'form', user: @user %>
+            </div>
+        </div>
+    </div>
+</div>
