--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,10 +12,24 @@
                   <li class="nav-item">
                       <%= link_to 'About', '#', class: 'nav-link' %>
                   </li>
-                  <li class="nav-item">
-                      <%= link_to 'Help', '#', class: 'nav-link' %>
-                  </li>
-                </ul>
+                  <% if logged_in? %>
+                    <div class="btn-group">
+                      <button type="button" class="btn btn-outline-success dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                        Account
+                      </button>
+                      <ul class="dropdown-menu">
+                        <li><%= link_to 'Profile', current_user, class: 'dropdown-item' %></li>
+                        <li><%= link_to 'Settings', '#', class: 'dropdown-item' %></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><%= button_to "Log out", logout_path, method: :delete, class: "dropdown-item" %></li>
+                      </ul>
+                    </div>
+                  <% else %>
+                    <li class="nav-item">
+                        <%= link_to 'Log in', login_path, class: 'nav-link' %>
+                    </li>
+                  <% end %>  
+              </ul>
             </div>
           </div>
         </div>
