--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
         <%= yield %>
         <%= render 'layouts/footer' %>
         <div class="alert alert-primary" role="alert">
-          <%= debug(params) if Rails.env.development? %>
+          <%= debug(params.to_yaml) if Rails.env.development? %>
         </div>
       </div>
   </body>
