--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
                      <%= link_to 'Home', '#', class: 'nav-link' %>
                   </li>
                   <li class="nav-item">
-                      <%= link_to 'About', '#', class: 'nav-link' %>
+                      <%= link_to 'Help', help_path, class: 'nav-link' %>
                   </li>
                   <% if logged_in? %>
                     <div class="btn-group">
