--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, "Signup" %>
 <div class="row justify-content-center mt-3">
     <div class="col-md-6">
         <div class="card w-75 mb-3">
